--- a/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
+++ b/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
@@ -24,6 +24,8 @@
     <ClInclude Include="Gimmick\GlassCollider.h" />
     <ClInclude Include="Gimmick\GoalCollider.h" />
     <ClInclude Include="Gimmick\TransparentCollider.h" />
+    <ClInclude Include="GoggleCollider.h" />
+    <ClInclude Include="GoggleScr.h" />
     <ClInclude Include="GraphicsTab.h" />
     <ClInclude Include="Player\PlayerCollider.h" />
     <ClInclude Include="Player\PlayerControl.h" />
@@ -59,6 +61,8 @@
     <ClCompile Include="Gimmick\GlassCollider.cpp" />
     <ClCompile Include="Gimmick\GoalCollider.cpp" />
     <ClCompile Include="Gimmick\TransparentCollider.cpp" />
+    <ClCompile Include="GoggleCollider.cpp" />
+    <ClCompile Include="GoggleScr.cpp" />
     <ClCompile Include="GraphicsTab.cpp" />
     <ClCompile Include="Player\PlayerCollider.cpp" />
     <ClCompile Include="Player\PlayerControl.cpp" />
