--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -197,6 +197,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClCompile Include="SrcEngine\Collider\Collision.cpp" />
     <ClCompile Include="SrcEngine\PostEffect\GaussianBlur.cpp" />
     <ClCompile Include="SrcEngine\PostEffect\GrayScale.cpp" />
+    <ClCompile Include="SrcEngine\PostEffect\SSAO.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrShadowCasterStage.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrSilhouetteStage.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp" />
@@ -321,6 +322,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClInclude Include="SrcEngine\Collider\Collision.h" />
     <ClInclude Include="SrcEngine\PostEffect\GaussianBlur.h" />
     <ClInclude Include="SrcEngine\PostEffect\GrayScale.h" />
+    <ClInclude Include="SrcEngine\PostEffect\SSAO.h" />
     <ClInclude Include="SrcEngine\Renderer\SrShadowCasterStage.h" />
     <ClInclude Include="SrcEngine\Renderer\SrSilhouetteStage.h" />
     <ClInclude Include="SrcEngine\Renderer\SrToonStage.h" />
