--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -549,6 +549,9 @@
     <ClCompile Include="SrcEngine\SrNormalCasterStage.cpp">
       <Filter>Engine\ソースファイル\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="SrcEngine\PostEffect\SSAO.cpp">
+      <Filter>未分類\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\Others\Essentials.h">
@@ -934,6 +937,9 @@
     </ClInclude>
     <ClInclude Include="SrcEngine\SrNormalCasterStage.h">
       <Filter>Engine\ヘッダーファイル\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="SrcEngine\PostEffect\SSAO.h">
+      <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
