--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -552,6 +552,9 @@
     <ClCompile Include="SrcEngine\PostEffect\SSAO.cpp">
       <Filter>未分類\ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SrcEngine\PostEffect\BlinkTransition.cpp">
+      <Filter>未分類\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\Others\Essentials.h">
@@ -941,6 +944,9 @@
     <ClInclude Include="SrcEngine\PostEffect\SSAO.h">
       <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="SrcEngine\PostEffect\BlinkTransition.h">
+      <Filter>未分類\ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\BasicPS.hlsl">
@@ -1066,6 +1072,12 @@
     <FxCompile Include="Assets\Shaders\BilateralFilterVS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\BlinkTransitionPS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\BlinkTransitionVS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shaders\Basic.hlsli">
@@ -1131,6 +1143,9 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Assets\Shaders\BilateralFilter.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Assets\Shaders\BlinkTransition.hlsli">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
