--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -555,6 +555,9 @@
     <ClCompile Include="SrcEngine\PostEffect\BlinkTransition.cpp">
       <Filter>未分類\ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SrcEngine\PostEffect\RGBShift.cpp">
+      <Filter>未分類\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\Others\Essentials.h">
@@ -947,6 +950,9 @@
     <ClInclude Include="SrcEngine\PostEffect\BlinkTransition.h">
       <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="SrcEngine\PostEffect\RGBShift.h">
+      <Filter>未分類\ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\BasicPS.hlsl">
@@ -1078,6 +1084,12 @@
     <FxCompile Include="Assets\Shaders\BlinkTransitionVS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\RGBShiftVS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\RGBShiftPS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shaders\Basic.hlsli">
@@ -1146,6 +1158,9 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Assets\Shaders\BlinkTransition.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Assets\Shaders\RGBShift.hlsli">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
