--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -558,6 +558,9 @@
     <ClCompile Include="SrcEngine\PostEffect\RGBShift.cpp">
       <Filter>未分類\ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SrcEngine\PostEffect\StageGenerating.cpp">
+      <Filter>未分類\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\Others\Essentials.h">
@@ -953,6 +956,9 @@
     <ClInclude Include="SrcEngine\PostEffect\RGBShift.h">
       <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="SrcEngine\PostEffect\StageGenerating.h">
+      <Filter>未分類\ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\BasicPS.hlsl">
@@ -1090,6 +1096,12 @@
     <FxCompile Include="Assets\Shaders\RGBShiftPS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\StageGeneratingPS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\StageGeneratingVS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shaders\Basic.hlsli">
@@ -1161,6 +1173,9 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Assets\Shaders\RGBShift.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Assets\Shaders\StageGenerating.hlsli">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
