ステージ生成の演出追加

--- a/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
+++ b/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="SoundTab.h" />
     <ClInclude Include="StageButton.h" />
     <ClInclude Include="StageDoor.h" />
+    <ClInclude Include="StageGenerater.h" />
     <ClInclude Include="StageSelect\SelectPanel.h" />
     <ClInclude Include="UI\CameraTab.h" />
     <ClInclude Include="UI\IUITab.h" />
@@ -75,6 +76,7 @@
     <ClCompile Include="SoundTab.cpp" />
     <ClCompile Include="StageButton.cpp" />
     <ClCompile Include="StageDoor.cpp" />
+    <ClCompile Include="StageGenerater.cpp" />
     <ClCompile Include="StageSelect\SelectPanel.cpp" />
     <ClCompile Include="UI\IUITab.cpp" />
     <ClCompile Include="UI\SuperUI.cpp" />
