--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -1126,6 +1126,12 @@
     <FxCompile Include="Assets\Shaders\KawaseBloomP3VS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\CompositePS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\CompositeVS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shaders\Basic.hlsli">
@@ -1209,6 +1215,9 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Assets\Shaders\KawaseBloomP3.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Assets\Shaders\Composite.hlsli">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
