--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -564,6 +564,9 @@
     <ClCompile Include="SrcEngine\PostEffect\KawaseBloom.cpp">
       <Filter>未分類\ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SrcEngine\Renderer\SrTransparentWallStage.cpp">
+      <Filter>未分類\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\Others\Essentials.h">
@@ -965,6 +968,9 @@
     <ClInclude Include="SrcEngine\PostEffect\KawaseBloom.h">
       <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="SrcEngine\Renderer\SrTransparentWallStage.h">
+      <Filter>未分類\ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\BasicPS.hlsl">
@@ -1132,6 +1138,12 @@
     <FxCompile Include="Assets\Shaders\CompositeVS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Assets\Shaders\TransparentWallPS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\TransparentWallVS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shaders\Basic.hlsli">
@@ -1218,6 +1230,9 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Assets\Shaders\Composite.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Assets\Shaders\TransparentWall.hlsli">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
