--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -186,7 +186,8 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
       <AdditionalLibraryDirectories>$(SolutionDir)SrcExternal\EASTL\export\Release\;$(SolutionDir)SrcExternal\Effekseer\Dev\Cpp\EffekseerRendererDX12\Release;$(SolutionDir)SrcExternal\Effekseer\Dev\Cpp\Effekseer\Release;$(SolutionDir)SrcExternal\Effekseer\Dev\Cpp\3rdParty\LLGI\src\Release;$(SolutionDir)$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(SolutionDir)</Command>
+      <Command>COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(SolutionDir)x64\$(Configuration)\
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
